[package]
name = "rust-modbus"
version = "1.2.0"
edition = "2021"
description = "A Modbus TCP server written in async rust for use as a proxy between TGN and Bryte"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fern = "0.7.0"
ipnetwork = "0.20.0"
log = "0.4.22"
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
tokio = { version = "1.37.0", features = ["time"] }
tokio-modbus = { version = "0.11.0", features = ["tcp-server"] }
